Wrong behaviour with "RGB to Intensity" in Image textures. Wrong color #48002

Closed
opened 2016-03-30 14:24:44 +02:00 by msalv · 7 comments

System Information
Debian Jessie 8.2 64-bit, and Windows 10 64bit
Intel i5-2500
GeForce GTX 970

Blender Version
Broken: 2.76, 2.77
Worked: (optional)

Short description of error

Using "RGB to Intensity" with an Image texture gives the wrong color. desktop.png The proof is that the proper color is displayed when using "RGB to Intensity" with a procedural texture, while with an Image texture the color is darker.

Exact steps for others to reproduce the error
Just open the file attached bugreport.blend and check the example in both render and glsl/texture view. All materials displayed have the exact same colors assigned. You can check that the procedural example has the same settings as the image texture example.

A workaround I found is either using float precision image textures, or changing the color space of the image texture to linear, raw, or non-color. However doing this makes no sense, since the image is black and white and its being used to mask a color I selected in the color picker of the "RGB to Intensity" section. This color should not become darker because of the colorspace of the texture being sRGB. Another problem with that workaround is that it doesnt work in glsl view.

For the GLSL view, a workaround is to use nodes. There is also an example of that in the file attached. Again, the colors are the same. And this is further proof that the colorspace of the texture should not make that green color darker, because this node approach still works well when changing the color space of the texture mask.

I went back to older versions to test it, and it never worked properly from 2.5 on. Back in 2.49 there was no color space, so there all 3 colors look the same. The same effect can be done in 2.77 by changing the scene display device to "none". But going back to sRGB and that one in the middle stays dark. It seems the color in "rgb to intensity" remains without gamma correction if an image texture is used.

**System Information** Debian Jessie 8.2 64-bit, and Windows 10 64bit Intel i5-2500 GeForce GTX 970 **Blender Version** Broken: 2.76, 2.77 Worked: (optional) **Short description of error** Using "RGB to Intensity" with an Image texture gives the wrong color. ![desktop.png](https://archive.blender.org/developer/F299551/desktop.png) The proof is that the proper color is displayed when using "RGB to Intensity" with a procedural texture, while with an Image texture the color is darker. **Exact steps for others to reproduce the error** Just open the file attached [bugreport.blend](https://archive.blender.org/developer/F299550/bugreport.blend) and check the example in both render and glsl/texture view. All materials displayed have the exact same colors assigned. You can check that the procedural example has the same settings as the image texture example. A workaround I found is either using float precision image textures, or changing the color space of the image texture to linear, raw, or non-color. However doing this makes no sense, since the image is black and white and its being used to mask a color I selected in the color picker of the "RGB to Intensity" section. This color should not become darker because of the colorspace of the texture being sRGB. Another problem with that workaround is that it doesnt work in glsl view. For the GLSL view, a workaround is to use nodes. There is also an example of that in the file attached. Again, the colors are the same. And this is further proof that the colorspace of the texture should not make that green color darker, because this node approach still works well when changing the color space of the texture mask. I went back to older versions to test it, and it never worked properly from 2.5 on. Back in 2.49 there was no color space, so there all 3 colors look the same. The same effect can be done in 2.77 by changing the scene display device to "none". But going back to sRGB and that one in the middle stays dark. It seems the color in "rgb to intensity" remains without gamma correction if an image texture is used.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2016-04-01 16:00:47 +02:00

That’s colors space issue, setting the image's colors space to Linear eg fixes it. Not at all an expert in this are, so will let @Sergey check whether behavior here is expected/correct, or if we are missing some conversion somewhere…

That’s colors space issue, setting the image's colors space to Linear eg fixes it. Not at all an expert in this are, so will let @Sergey check whether behavior here is expected/correct, or if we are missing some conversion somewhere…
Author

No problem. I think I provided enough evidence and explanations on why this is inconsistent and should be considered a bug, and I hope you take it into consideration.

No problem. I think I provided enough evidence and explanations on why this is inconsistent and should be considered a bug, and I hope you take it into consideration.

This issue was referenced by 2f08d5f761

This issue was referenced by 2f08d5f761e6941e11a712d0cbee2f7bd65e4c91

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48002
No description provided.